adds url encoded payload criteria
