# src/main/scala/com/gipeshka/request/ReactionRequestPart.scala
@@ -8,10 +8,11 @@ case class ReactionRequestPart(
   path: Option[String],
   query: Option[Map[String, String]],
   headers: Option[Map[String, String]],
-  body: Option[JsValue]
+  bodyJson: Option[JsValue],
+  bodyUrlEncoded: Option[Map[String, String]]
 )
 
 trait ReactionRequestPartFormat extends SprayJsonSupport with DefaultJsonProtocol
 {
-  implicit val formatRequestPart = jsonFormat5(ReactionRequestPart)
+  implicit val formatRequestPart = jsonFormat6(ReactionRequestPart)
 }
